pilot/pkg/config/kube/ingress/testdata/overlay.yaml.golden
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  creationTimestamp: null
  name: foo-istio-autogenerated-k8s-ingress-ns
  namespace: dubbo-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http-80-ingress-foo-ns
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  creationTimestamp: null
  name: foo2-istio-autogenerated-k8s-ingress-ns
  namespace: dubbo-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http-80-ingress-foo2-ns
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/route-semantics: ingress
  creationTimestamp: null
  name: foohost-bar-com-foo-istio-autogenerated-k8s-ingress
  namespace: ns
spec:
  gateways:
  - dubbo-system/foo-istio-autogenerated-k8s-ingress-ns
  hosts:
  - foohost.bar.com
  http:
  - match:
    - uri:
        exact: /second
    route:
    - destination:
        host: service2.ns.svc.mydomain
        port:
          number: 4200
      weight: 100
  - match:
    - {}
    route:
    - destination:
        host: service1.ns.svc.mydomain
        port:
          number: 4200
      weight: 100
---
