pilot/pkg/config/kube/ingress/testdata/simple.yaml.golden
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  creationTimestamp: null
  name: foo-istio-autogenerated-k8s-ingress-ns
  namespace: dubbo-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http-80-ingress-foo-ns
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    internal.istio.io/route-semantics: ingress
  creationTimestamp: null
  name: foohost-bar-com-foo-istio-autogenerated-k8s-ingress
  namespace: ns
spec:
  gateways:
  - dubbo-system/foo-istio-autogenerated-k8s-ingress-ns
  hosts:
  - foohost.bar.com
  http:
  - match:
    - uri:
        exact: /sub/path/
    route:
    - destination:
        host: service1.ns.svc.mydomain
        port:
          number: 4202
      weight: 100
  - match:
    - uri:
        exact: /sub/path/
    route:
    - destination:
        host: service1.ns.svc.mydomain
        port:
          number: 4207
      weight: 100
  - match:
    - uri:
        prefix: /sub/path/
    route:
    - destination:
        host: service1.ns.svc.mydomain
        port:
          number: 4209
      weight: 100
  - match:
    - uri:
        exact: /sub/path
    route:
    - destination:
        host: service1.ns.svc.mydomain
        port:
          number: 4201
      weight: 100
  - match:
    - uri:
        exact: /sub/path
    route:
    - destination:
        host: service1.ns.svc.mydomain
        port:
          number: 4206
      weight: 100
  - match:
    - uri:
        prefix: /sub/path
    route:
    - destination:
        host: service1.ns.svc.mydomain
        port:
          number: 4208
      weight: 100
  - match:
    - uri:
        exact: /regex2*
    route:
    - destination:
        host: service1.ns.svc.mydomain
        port:
          number: 4204
      weight: 100
  - match:
    - uri:
        prefix: /regex1
    route:
    - destination:
        host: service1.ns.svc.mydomain
        port:
          number: 4203
      weight: 100
  - match:
    - uri:
        prefix: /regex3
    route:
    - destination:
        host: service1.ns.svc.mydomain
        port:
          number: 4205
      weight: 100
  - match:
    - uri:
        exact: /path
    route:
    - destination:
        host: service1.ns.svc.mydomain
        port:
          number: 4200
      weight: 100
---
